<resources>
    <string name="what_do_you_want_to_share">What do you want to share?</string>
    <string name="currently_listening_to_x_by_x">Currently listening to %1$s by %2$s.</string>
    <string name="the_audio_file">The audio file</string>
    <string name="x_has_been_set_as_ringtone">Set %1$s as your ringtone.</string>
    <string name="action_set_as_ringtone">Set as ringtone</string>
    <string name="action_share">Share</string>
    <string name="action_settings">"Settings"</string>
    <string name="action_grant">Grant</string>
    <string name="action_about">About</string>
    <string name="action_clear_playlist">Clear playlist</string>
    <string name="action_add_to_favorites">Add to favorites</string>
    <string name="action_remove_from_favorites">Remove from favorites</string>
    <string name="save_playlists_title">Save as files</string>
    <string name="action_import_from_playlist">Import from playlist</string>
    <string name="action_search">Search</string>
    <string name="action_play_next">Play next</string>
    <string name="action_play">Play</string>
    <string name="action_play_pause">Play/Pause</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="pref_title_enqueue_song_default_choice">Default action on choosing/tapping a song while browsing</string>
    <string name="action_always_ask_for_confirmation">Always ask for actions</string>
    <string name="action_add_to_playing_queue">Add to playing queue</string>
    <string name="action_remove_from_playing_queue">Remove from playing queue</string>
    <string name="action_clear_playing_queue">Clear playing queue</string>
    <string name="action_save_playing_queue">Save playing queue</string>
    <string name="about_to_add_title_to_playing_queue">About to add 1 song into the playing queue.\nHow do you want to proceed with this song?</string>
    <string name="about_to_add_x_titles_to_playing_queue">About to add %1$d songs into the playing queue.\nHow do you want to proceed with these songs?</string>
    <string name="added_title_to_playing_queue">"Added 1 song to the playing queue."</string>
    <string name="added_x_titles_to_playing_queue">Added %1$d songs to the playing queue.</string>
    <string name="failed_restore_playing_queue">Cannot restore, previous queue is corrupted</string>
    <string name="action_add_to_playlist">Add to playlist…</string>
    <string name="added_x_titles_to_playlist">Added %1$d songs to the playlist.</string>
    <string name="action_tag_editor">Tag editor</string>
    <string name="action_delete_from_device">Delete from device</string>
    <string name="action_details">Details</string>
    <string name="action_rename">Rename</string>
    <string name="action_delete">Delete</string>
    <string name="action_scan">Scan</string>
    <string name="action_set_as_start_directory">Set as start directory</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="genres">Genres</string>
    <string name="songs">Songs</string>
    <string name="playlists">Playlists</string>
    <string name="unplayable_file">Couldn\u2019t play this song.</string>
    <string name="biography_unavailable">Couldn\u2019t find a biography entry for this artist.</string>
    <string name="wiki_unavailable">Couldn\u2019t find a wiki entry for this album.</string>
    <string name="biography">Biography</string>
    <string name="wiki">Wiki</string>
    <string name="audio_focus_denied">Audio focus denied.</string>
    <string name="album">Album</string>
    <string name="artist">Artist</string>
    <string name="genre">Genre</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="unknown_album">Unknown Album</string>
    <string name="unknown_genre">Unknown Genre</string>
    <string name="untitled_song">Untitled</string>
    <string name="album_artist">Album artist</string>
    <string name="year">Year</string>
    <string name="track_number">"Track Number"</string>
    <string name="disc_number">"Disc Number"</string>
    <string name="lyrics">Lyrics</string>
    <string name="album_artist_multiple">Album Artists (one per line)</string>
    <string name="artist_multiple">Artists (one per line)</string>
    <string name="genre_multiple">Genres (one per line)</string>
    <string name="album_or_artist_empty">The title or artist is empty.</string>
    <string name="saving_changes">Saving changes</string>
    <string name="label_details">Details</string>
    <string name="label_file_path">File path</string>
    <string name="label_file_size">Size</string>
    <string name="label_file_format">Format</string>
    <string name="label_track_length">Length</string>
    <string name="label_bit_rate">Bitrate</string>
    <string name="label_sampling_rate">Sampling rate</string>
    <string name="label_replay_gain" translatable="false">ReplayGain</string>
    <string name="label_replay_gain_peak">ReplayGain peak</string>
    <string name="label_date_added">Added</string>
    <string name="label_date_modified">Modified</string>
    <string name="action_go_to_artist">Go to artist</string>
    <string name="action_go_to_album">Go to album</string>
    <string name="label_playing_queue">Playing queue</string>
    <string name="no_results">No results</string>
    <string name="updating">Updating…</string>
    <string name="action_remove_from_playlist">Remove from playlist</string>
    <string name="action_grid_size">Grid size</string>
    <string name="action_grid_size_land">Grid size (land)</string>
    <string name="inserted_x_songs_into_playlist_x">Inserted %1$d songs into the playlist %2$s.</string>
    <string name="created_playlist_x">Created playlist %1$s.</string>
    <string name="deleted_x_songs">Deleted %1$d songs.</string>
    <string name="playlist_exists">Playlist %1$s already exists.</string>
    <string name="could_not_create_playlist">Couldn\u2019t create playlist.</string>
    <string name="delete_playlist_x"><![CDATA[Delete the playlist <b>%1$s</b>?]]></string>
    <string name="clear_playlist_x"><![CDATA[Clear the playlist <b>%1$s</b>? This can\u2019t be undone!]]></string>
    <string name="delete_x_playlists"><![CDATA[Delete <b>%1$d</b> playlists?]]></string>
    <string name="delete_song_x"><![CDATA[Delete the song <b>%1$s</b>?]]></string>
    <string name="delete_x_songs"><![CDATA[Delete <b>%1$d</b> songs?]]></string>
    <string name="remove_song_x_from_playlist"><![CDATA[Remove the song <b>%1$s</b> from the playlist?]]></string>
    <string name="remove_x_songs_from_playlist"><![CDATA[Remove <b>%1$d</b> songs from the playlist?]]></string>
    <string name="delete_song_title">Delete song</string>
    <string name="delete_songs_title">Delete songs</string>
    <string name="remove_song_from_playlist_title">Remove song from playlist</string>
    <string name="remove_songs_from_playlist_title">Remove songs from playlist</string>
    <string name="rename_playlist_title">Rename playlist</string>
    <string name="delete_playlist_title">Delete playlist</string>
    <string name="delete_playlists_title">Delete playlists</string>
    <string name="clear_playlist_title">Clear playlist</string>
    <string name="save_playlist_title">Save as file</string>
    <string name="add_playlist_title">"Add to playlist"</string>
    <string name="import_playlist_title">"Import from playlist"</string>
    <string name="select_all_title">Select all</string>
    <string name="action_shuffle_all">Shuffle all</string>
    <string name="action_shuffle_album">Shuffle album</string>
    <string name="action_shuffle_artist">Shuffle artist</string>
    <string name="action_shuffle_playlist">Shuffle playlist</string>
    <string name="action_go_to_start_directory">Go to start directory</string>
    <string name="action_show_lyrics">Show lyrics</string>
    <string name="light_theme_name">Light</string>
    <string name="dark_theme_name">Dark</string>
    <string name="black_theme_name">Black (AMOLED)</string>
    <string name="follow_system_theme_name">Follow system theme</string>
    <string name="always">Always</string>
    <string name="only_on_wifi">Only on Wi-Fi</string>
    <string name="never">Never</string>
    <string name="today">Today</string>
    <string name="this_week">This week</string>
    <string name="pref_header_now_playing_screen">Now playing</string>
    <string name="pref_header_development">Development/Experimental features</string>
    <string name="pref_header_library">Library</string>
    <string name="pref_header_playlists">Playlists</string>
    <string name="pref_header_migrating">Migrating</string>
    <string name="pref_title_recently_played_interval">Recently played playlist interval</string>
    <string name="pref_title_not_recently_played_interval">Not recently played playlist interval</string>
    <string name="pref_title_last_added_interval">Last added playlist interval</string>
    <string name="pref_title_export">Export</string>
    <string name="pref_title_import">Import</string>
    <string name="pref_summary_maintain_top_tracks_playlist">Maintain a playlist of top tracks</string>
    <string name="pref_summary_maintain_skipped_songs_playlist">Maintain a playlist of songs skipped during playback</string>
    <string name="pref_title_synchronized_lyrics_show">Show synchronized lyrics</string>
    <string name="pref_title_animate_playing_song_icon">Animate playing song icon</string>
    <string name="pref_title_remember_last_tab">Remember last tab</string>
    <string name="pref_summary_synchronized_lyrics_show">Currently only synchronized lyrics in LRC format are supported. Either embedded or as a separate file.</string>
    <string name="pref_summary_animate_playing_song_icon">Animate the icon of the playing song in different song-related views</string>
    <string name="pref_summary_remember_last_tab">Go to the last opened tab on launch</string>
    <string name="pref_title_oops_handler_enabled">Collect crash reports</string>
    <string name="pref_summary_oops_handler_enabled">Help development by collecting and reporting crashes</string>
    <string name="pref_title_queue_sync_with_media_store">Sync queue with media tag updates</string>
    <string name="my_top_tracks">My top tracks</string>
    <string name="skipped_songs">Skipped songs</string>
    <string name="support_development">Support development</string>
    <string name="report_bugs">Report bugs</string>
    <string name="report_bugs_summary">Report bugs or request new features.</string>
    <string name="rate_on_google_play">Rate</string>
    <string name="rate_on_google_play_summary">Leave a positive rating on Google Play if you like Vinyl Music Player.</string>
    <string name="pref_title_now_playing_screen_appearance">Appearance</string>
    <string name="library">Library</string>
    <string name="folders">Folders</string>
    <string name="blacklist">Blacklist</string>
    <string name="pref_summary_blacklist">The content of blacklisted folders is hidden from your library</string>
    <string name="library_categories">Library categories</string>
    <string name="pref_summary_library_categories">Configure visibility and order of library categories</string>
    <string name="reset_discography">Rescan library</string>
    <string name="pref_summary_show_song_number">Show the song track number in the playing queue and the notification</string>
    <string name="pref_title_show_song_number">Show song track number</string>
    <string name="whitelist">Whitelist</string>
    <string name="pref_summary_whitelist">Only show content below start folder: </string>
    <string name="write_permission">Always ask for write permission</string>
    <string name="pref_summary_write_permission">To revoke already granted permission, go to android settings for this app, then &quot;Storage &amp; cache&quot; and revoke external storage</string>
</resources>