<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory android:title="@string/pref_header_library">

        <com.poupa.vinylmusicplayer.preferences.LibraryPreference
            app:iconSpaceReserved="false"
            android:key="library_categories"
            android:summary="@string/pref_summary_library_categories"
            android:title="@string/library_categories" />

        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="true"
            android:key="remember_last_tab"
            android:summary="@string/pref_summary_remember_last_tab"
            android:title="@string/pref_title_remember_last_tab" />

        <com.poupa.vinylmusicplayer.preferences.BlacklistPreference
            app:iconSpaceReserved="false"
            android:key="blacklist"
            android:summary="@string/pref_summary_blacklist"
            android:title="@string/blacklist" />

        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="whitelist_enabled"
            android:summary="@string/pref_summary_whitelist"
            android:title="@string/whitelist" />

        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="always_ask_write_permission"
            android:summary="@string/pref_summary_write_permission"
            android:title="@string/write_permission" />

    </com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>

</androidx.preference.PreferenceScreen>
