<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/action_shuffle_playlist"
        android:icon="@drawable/ic_shuffle_white_24dp"
        android:title="@string/action_shuffle_playlist"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_play"
        android:icon="@drawable/ic_play_arrow_white_24dp"
        android:title="@string/action_play"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_play_next"
        android:icon="@drawable/ic_redo_white_24dp"
        android:title="@string/action_play_next"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_add_to_current_playing"
        android:icon="@drawable/ic_library_add_white_24dp"
        android:title="@string/action_add_to_playing_queue"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_add_to_playlist"
        android:icon="@drawable/ic_playlist_add_white_24dp"
        android:title="@string/action_add_to_playlist"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_playlist_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear_playlist"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/action_clear_playlist"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_save_playlist"
        android:icon="@drawable/ic_save_white_24dp"
        android:title="@string/save_playlist_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_import_from_playlist"
        android:title="@string/action_import_from_playlist"
        app:showAsAction="never" />
</menu>