<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory android:title="@string/pref_header_now_playing_screen">

        <com.poupa.vinylmusicplayer.preferences.NowPlayingScreenPreference
            app:iconSpaceReserved="false"
            android:key="now_playing_screen_id"
            android:title="@string/pref_title_now_playing_screen_appearance" />

        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="true"
            android:key="synchronized_lyrics_show"
            android:summary="@string/pref_summary_synchronized_lyrics_show"
            android:title="@string/pref_title_synchronized_lyrics_show" />

        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="animate_playing_song_icon"
            android:summary="@string/pref_summary_animate_playing_song_icon"
            android:title="@string/pref_title_animate_playing_song_icon" />

        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="show_song_number_on_playing_queue"
            android:summary="@string/pref_summary_show_song_number"
            android:title="@string/pref_title_show_song_number" />

        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="allow_random_album_shuffling"
            android:summary="@string/pref_summary_allow_random_album"
            android:title="@string/pref_title_allow_random_album" />

    </com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>

</androidx.preference.PreferenceScreen>