<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory android:title="@string/blacklist">

        <com.poupa.vinylmusicplayer.preferences.BlacklistPreference
            app:iconSpaceReserved="false"
            android:key="blacklist"
            android:summary="@string/pref_summary_blacklist"
            android:title="@string/blacklist" />

        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="whitelist_enabled"
            android:summary="@string/pref_summary_whitelist"
            android:title="@string/whitelist" />

    </com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>

</androidx.preference.PreferenceScreen>
