<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/navigation_drawer_menu_category_sections"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/ic_library_music_white_24dp"
            android:title="@string/library" />
        <item
            android:id="@+id/nav_folders"
            android:icon="@drawable/ic_folder_white_24dp"
            android:title="@string/folders" />
    </group>

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/action_reset_discography"
            android:icon="@drawable/ic_scanner_white_24dp"
            android:title="@string/reset_discography" />
        <item
            android:id="@+id/action_reset_mediastore_playlist"
            android:icon="@drawable/ic_playlist_play_white_24dp"
            android:title="@string/reset_mediastore_playlist" />
    </group>


    <group
        android:id="@+id/navigation_drawer_menu_category_other"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_help_white_24dp"
            android:title="@string/action_about" />
    </group>

</menu>
