<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardBackgroundColor="?cardBackgroundColor"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:paddingBottom="@dimen/default_item_margin"
            android:paddingLeft="@dimen/default_item_margin"
            android:paddingRight="@dimen/default_item_margin"
            android:paddingTop="@dimen/title_top_margin"
            android:text="@string/support_development"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="?android:textColorSecondary" />

        <LinearLayout
            android:id="@+id/report_bugs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/rectSelector"
            android:clickable="true"
            android:gravity="center_vertical"
            android:minHeight="@dimen/md_listitem_height"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/default_item_margin"
            android:paddingRight="@dimen/default_item_margin">

            <com.poupa.vinylmusicplayer.views.IconImageView
                android:id="@+id/icon_bug_report"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/ic_bug_report_white_24dp"
                tools:ignore="ContentDescription,UnusedAttribute" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/report_bugs"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/report_bugs_summary"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/rate_on_google_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/rectSelector"
            android:clickable="true"
            android:gravity="center_vertical"
            android:minHeight="@dimen/md_listitem_height"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/default_item_margin"
            android:paddingRight="@dimen/default_item_margin">

            <com.poupa.vinylmusicplayer.views.IconImageView
                android:id="@+id/icon_rate"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/ic_star_white_24dp"
                tools:ignore="ContentDescription,UnusedAttribute" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rate_on_google_play"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rate_on_google_play_summary"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
